mudança de empty para blank