@@ -519,7 +519,7 @@ public class NFeXMLGenerator
 			ide.setIndPres (IND_PRES_N_A);
 		
 		//	Digitado na NF
-		else if (nf.getLBR_IndPres() != null && !nf.getLBR_IndPres().isEmpty())
+		else if (nf.getLBR_IndPres() != null && !nf.getLBR_IndPres().isBlank())
 			ide.setIndPres (IndPres.Enum.forString(nf.getLBR_IndPres()));
 		
 		//	Valor padrão
@@ -596,7 +596,7 @@ public class NFeXMLGenerator
 		emit.setXNome(normalize (oi.getlbr_LegalEntity()));
 		emit.setXFant(normalize (nf.getlbr_Fantasia()));
 		
-		if (nf.getlbr_OrgCCM() != null && !nf.getlbr_OrgCCM().isEmpty())
+		if (nf.getlbr_OrgCCM() != null && !nf.getlbr_OrgCCM().isBlank())
 		{
 			emit.setIM(normalize (nf.getlbr_OrgCCM()));
 		
@@ -604,7 +604,7 @@ public class NFeXMLGenerator
 			//Municipal (id:C19) for informada.
 			String cnae = toNumericStr(nf.getlbr_CNAE());
 			
-			if (cnae != null && !cnae.isEmpty() && cnae.length() == 7)
+			if (cnae != null && !cnae.isBlank() && cnae.length() == 7)
 				emit.setCNAE(cnae);
 		}			
 		
@@ -730,7 +730,7 @@ public class NFeXMLGenerator
 						dest.setIndIEDest (IND_IE_NAO_CONTRIB);	//	Homologação
 					
 					//	SUFRAMA
-					if ("AM".equals (nf.getlbr_BPRegion()) && nf.getlbr_BPSuframa() != null && !nf.getlbr_BPSuframa().isEmpty())
+					if ("AM".equals (nf.getlbr_BPRegion()) && nf.getlbr_BPSuframa() != null && !nf.getlbr_BPSuframa().isBlank())
 						dest.setISUF (toNumericStr (nf.getlbr_BPSuframa()));
 				}
 				
@@ -786,7 +786,7 @@ public class NFeXMLGenerator
 					if (nf.getlbr_BPDeliveryIE() != null && !nf.getlbr_BPDeliveryIE().toUpperCase().contains("ISENT"))
 						retOuEntreg.setIE(toNumericStr(nf.getlbr_BPDeliveryIE()));
 					//
-					if (nf.getLBR_BPDeliveryName() != null && !nf.getLBR_BPDeliveryName().isEmpty())
+					if (nf.getLBR_BPDeliveryName() != null && !nf.getLBR_BPDeliveryName().isBlank())
 						retOuEntreg.setXNome(normalize(nf.getLBR_BPDeliveryName()));
 					
 					retOuEntreg.setXLgr(normalize (nf.getlbr_BPDeliveryAddress1()));
@@ -907,7 +907,7 @@ public class NFeXMLGenerator
 			
 			//	GTIN (antigo EAN)
 			String gtin = nfl.getUPC();
-			if (gtin == null || gtin.isEmpty() || gtin.equalsIgnoreCase (SEM_GTIN))
+			if (gtin == null || gtin.isBlank() || gtin.equalsIgnoreCase (SEM_GTIN))
 			{
 				prod.setCEAN (SEM_GTIN);
 				prod.setCEANTrib (SEM_GTIN);
@@ -965,7 +965,7 @@ public class NFeXMLGenerator
 					prod.setCNPJFab(TextUtil.toNumeric (nfl.getLBR_CNPJManufacturer ()));
 				
 				//	Código do Benefício na UF
-				if (nfl.getLBR_TaxBenefitCode() != null && !nfl.getLBR_TaxBenefitCode().trim().isEmpty())
+				if (nfl.getLBR_TaxBenefitCode() != null && !nfl.getLBR_TaxBenefitCode().isBlank())
 					prod.setCBenef(nfl.getLBR_TaxBenefitCode().trim());
 			}
 			
@@ -1051,14 +1051,14 @@ public class NFeXMLGenerator
 				
 				//	Preenche o pedido referenciado (xPed)
 				String xPed = nfl.getPOReference();
-				if (xPed != null && !xPed.trim().isEmpty())
+				if (xPed != null && !xPed.isBlank())
 				{
 					//	Trim XPed
 					xPed = xPed.trim();
 					
 					if (xPed.length() > 15)
 					{
-						xPed = xPed.substring (0, 15);
+						xPed = xPed.substring (0, 15).trim();
 						log.warning("XML = xPed excede o tamanho máximo de 15 dígitos, valor será cortado no XML");
 					}
 					prod.setXPed (xPed);
@@ -1066,11 +1066,14 @@ public class NFeXMLGenerator
 				
 				//	Preenche o item do pedido referenciado (nItemPed)
 				String nItemPed = TextUtil.toNumeric (nfl.getLBR_PORef_Item());
-				if (!nItemPed.isEmpty())
+				if (!nItemPed.isBlank())
 				{
+					//	Trim nItemPed
+					nItemPed = nItemPed.trim();
+					
 					if (nItemPed.length() > 6)
 					{
-						nItemPed = nItemPed.substring (0, 6);
+						nItemPed = nItemPed.substring (0, 6).trim();
 						log.warning("XML = nItemPed excede o tamanho máximo de 6 dígitos, valor será cortado no XML");
 					}
 					prod.setNItemPed(nItemPed);
@@ -1079,7 +1082,7 @@ public class NFeXMLGenerator
 			
 			//	I07. Produtos e Serviços / Grupo Diversos
 			String nFCI = nfl.getLBR_FCIValue();
-			if (nFCI != null && !nFCI.trim().isEmpty())
+			if (nFCI != null && !nFCI.isBlank())
 				prod.setNFCI (nFCI);
 
 			//	I80. Rastreabilidade de Produto - NT2016.002 v1.51
@@ -1120,7 +1123,7 @@ public class NFeXMLGenerator
 					{
 						Med med = prod.addNewMed();
 						if (attribute.getLBR_ANVISACode() != null && 
-								!attribute.getLBR_ANVISACode().isEmpty() &&
+								!attribute.getLBR_ANVISACode().isBlank() &&
 									!attribute.getLBR_ANVISACode().equals("ISENTO"))
 							med.setCProdANVISA(attribute.getLBR_ANVISACode());
 						else
@@ -1793,7 +1796,7 @@ public class NFeXMLGenerator
 			
 			//	V. Informações adicionais (para o item da NF-e)
 			String nflDesc = normalize (nfl.getDescription());
-			if (nflDesc != null && !nflDesc.isEmpty())
+			if (nflDesc != null && !nflDesc.isBlank())
 				det.setInfAdProd (nflDesc);
 		}
 		
@@ -1861,7 +1864,7 @@ public class NFeXMLGenerator
 				String shipperRegion 	= normalize (nf.getlbr_BPShipperRegion());
 				String shipperPlate		= normalize (nf.getlbr_BPShipperLicensePlate());
 				
-				if (shipperCNPJF != null && !shipperCNPJF.trim().isEmpty())
+				if (shipperCNPJF != null && !shipperCNPJF.isBlank())
 				{
 					if (shipperCNPJF.length() == 11)
 						transporta.setCPF (shipperCNPJF);
@@ -1869,26 +1872,26 @@ public class NFeXMLGenerator
 						transporta.setCNPJ (shipperCNPJF);
 				}
 				
-				if (shipperName != null && !shipperName.isEmpty())
+				if (shipperName != null && !shipperName.isBlank())
 					transporta.setXNome(shipperName);
 				
-				if (shipperIE != null && !shipperIE.trim().isEmpty())
+				if (shipperIE != null && !shipperIE.isBlank())
 					transporta.setIE (shipperIE);
 				
-				if (shipperAddress != null && !shipperAddress.isEmpty())
+				if (shipperAddress != null && !shipperAddress.isBlank())
 				{
 					//	Limite de 60 caracteres
 					transporta.setXEnder(shipperAddress.substring (0, Math.min (shipperAddress.length(), 60)));
 				}
 				
-				if (shipperCity != null && !shipperCity.isEmpty())
+				if (shipperCity != null && !shipperCity.isBlank())
 					transporta.setXMun(shipperCity);
 				
-				if (shipperRegion != null && !shipperRegion.isEmpty())
+				if (shipperRegion != null && !shipperRegion.isBlank())
 					transporta.setUF(TUf.Enum.forString(shipperRegion));
 				
 				//	Placa do Veículo. Formato (XXX-0000/UF)
-				if (shipperPlate != null && !shipperPlate.isEmpty() && 
+				if (shipperPlate != null && !shipperPlate.isBlank() && 
 						TextUtil.retiraEspecial(shipperPlate).length() > 0)
 				{
 					//	Encontrar posição da / na variável shipperPlate para Seperar a Placa da UF do Veículo
@@ -1941,7 +1944,7 @@ public class NFeXMLGenerator
 				//	Package Type
 				String packType = nf.getlbr_PackingType();
 				
-				if (packType != null && !packType.isEmpty())
+				if (packType != null && !packType.isBlank())
 					vol.setEsp(packType.trim());
 			}
 			
@@ -2079,7 +2082,7 @@ public class NFeXMLGenerator
 			exporta.setUFSaidaPais(TUfEmi.Enum.forString (nf.getLBR_RegionExport().getName()));
 			exporta.setXLocExporta(normalize (nf.getLBR_ExportPlace()));	
 			
-			if (nf.getLBR_DispatchPlace() != null && !nf.getLBR_DispatchPlace().isEmpty())
+			if (nf.getLBR_DispatchPlace() != null && !nf.getLBR_DispatchPlace().isBlank())
 				exporta.setXLocExporta(normalize (nf.getLBR_DispatchPlace()));	
 		}
 		
@@ -2170,7 +2173,7 @@ public class NFeXMLGenerator
 				else
 					vNFCeQRCodeURL = NFeUtil.generateQRCodeNFCeURL(nf, digestValue, nfeID, cDest, nf.getDateDoc(), normalize (nf.getICMSAmt()), T_AMB_PRODUCAO.toString());
 				
-				if (vNFCeQRCodeURL != null && !vNFCeQRCodeURL.isEmpty())
+				if (vNFCeQRCodeURL != null && !vNFCeQRCodeURL.isBlank())
 				{
 					String url_chave = MLBRNFeWebService.getURL (MLBRNFeWebService.NFCE_CONSULTA_CHAVE, nf.getlbr_NFeEnv(), NFeUtil.VERSAO_LAYOUT, nf.getOrg_Location().getC_Region_ID());
 					
@@ -2300,7 +2303,7 @@ public class NFeXMLGenerator
 	 */
 	public static String normalize (String text)
 	{
-		if (text == null || text.isEmpty())
+		if (text == null || text.isBlank())
 			return null;
 		
 		//	Substitui o travessão por hífen
